<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Link Five Dots</string>
    <string name="language">English</string>

    <string name="greetings">Hi, %1$s!</string>
    <string name="android">Android</string>
    <string name="how_to_title">How To Play</string>
    <string name="how_to_text">
        \t
        Be the first to link five dots in a straight line horizontally, vertically or diagonally.
        Android plays blue dots, you play red dots. Red and blue dots are put in turn on the line
        intersections. The first move is yours.
        \n\n\t
        Drag the screen to move the grid.
        \n\t
        Scale the screen to enlarge or reduce grid size.
        \n\t
        Use menu to restart the game, undo last move, see game scores or see how to play.
        \n\t
        Press \"Search\" button to hide/show arrows around the last move dot.</string>

    <string name="scores_title">Scores</string>
    <string name="scores_no_internet">No internet access</string>
    <string name="scores_number">#</string>
    <string name="scores_name">Name</string>
    <string name="scores_moves">Number of moves</string>
    <string name="scores_status">Status</string>
    <string name="scores_won">won</string>
    <string name="scores_lost">lost</string>

    <string name="end_win">You’ve won!</string>
    <string name="end_lose">You’ve failed!</string>
    <string name="end_new_game">New</string>
    <string name="end_undo">Undo</string>
    <string name="end_move">%1$d moves done for %2$d s.</string>

    <string name="scores_time">Time</string>
    <string name="end_publish">Publish</string>

    <string name="scores_loading">Loading…</string>

    <string name="menu_single_player">Single Player</string>
    <string name="menu_multi_player">Multiplayer</string>
    <string name="two_players">Two players</string>
    <string name="menu_local_network">Local Area Network</string>
    <string name="menu_online_game">Online</string>

    <string name="rate_this_app">Rate this app</string>

    <!-- 18 Strings for Dialog yes button -->
    <string name="yes">"Yes"</string>
    <!-- 21 Strings for Dialog no button -->
    <string name="no">"No"</string>
    <!-- 23 Strings for Dialog create button -->
    <string name="create">Create</string>
    <!-- 33 Device Info screen. Used for a status item's value when the proper value is not known -->
    <string name="device_info_default">Unknown</string>

    <!-- Bluetooth settings screen, Discoverable checkbox summary text -->
    <string name="bluetooth_not_discoverable">Make device discoverable</string>
    <!-- 233 Bluetooth settings screen, summary after selecting Discoverable check box [CHAR LIMIT=50] -->
    <string name="bluetooth_is_discoverable">Visible to all nearby Bluetooth devices (%1$s)</string>
    <!-- 239 Bluetooth settings screen, summary text when not discoverable with paired devices [CHAR LIMIT=50] -->
    <string name="bluetooth_only_visible_to_paired_devices">Only visible to paired devices</string>
    <!-- 275 Bluetooth Visibility disconnect question.  Asks the user if they wish to disconnect a paired bluetooth device.  [CHAR LIMIT=50] -->
    <string name="bluetooth_is_disconnect_question">"Disconnect \u0022%1$s\u0022?"</string>
    <!-- 284 Bluetooth settings.  Message when connected to a device. [CHAR LIMIT=40] -->
    <string name="bluetooth_connected">Connected</string>
    <!-- 294 Bluetooth settings.  Message when a device is disconnected -->
    <string name="bluetooth_disconnected">Disconnected</string>
    <!-- 298 Bluetooth settings.  Message when connecting to a device -->
    <string name="bluetooth_connecting">Connecting\u2026</string>
    <!-- 308 Bluetooth settings screen, text that appears when scanning for devices is finished and no nearby bluetooth device was found [CHAR LIMIT=40]-->
    <string name="bluetooth_no_devices_found">No nearby Bluetooth devices were found.</string>
    <!-- 319 Strings for BluetoothDevicePicker [CHAR LIMIT=40]-->
    <string name="device_picker">Choose Bluetooth device</string>
    <!-- 368 Bluetooth connection permission Alert Activity text [CHAR LIMIT=none]-->
    <string name="bluetooth_connection_dialog_text">"Do you want to connect to \u0022%1$s\u0022?"</string>
    <!-- 605 Button label for generic cancel action [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <!-- 614 Button label for generic OK action [CHAR LIMIT=20] -->
    <string name="okay">OK</string>
    <!-- 628 Title of the Settings activity shown within the application itself. -->
    <string name="settings_label">Settings</string>
    <!-- 1118 Used as title on second screen after selecting Bluetooth settings -->
    <string name="bluetooth_settings">Bluetooth</string>
    <!-- 1174 Message for the error dialog when BT connecting operation fails generically. -->
    <string name="bluetooth_connecting_error_message">Couldn\'t connect to \u0022%1$s\u0022.</string>
    <!-- 1179 Bluetooth settings: The title of the action button that initiates a search for nearby devices [CHAR LIMIT=20] -->
    <string name="bluetooth_search_for_devices">Refresh</string>
    <!-- 1203 Bluetooth settings: The sub heading for devices which have already been paired with this device. [CHAR LIMIT=40] -->
    <string name="bluetooth_preference_paired_devices">Paired devices</string>
    <!-- 1205 Bluetooth settings: The sub heading for available devices during and after scanning. [CHAR LIMIT=40] -->
    <string name="bluetooth_preference_found_devices">Available devices</string>

    <!-- 2355 Edit access point label summary text when no value has been set -->
    <string name="apn_not_set">Not set</string>
    <!-- 2357 Edit access point labels: A label the user can give to the APN to allow him to differentiate it from the others -->
    <string name="apn_name">Name:</string>
    <!-- Edit access point labels: The username that will be used when connecting to this APN-->
    <string name="apn_user">Username</string>

    <!-- 2842 Manage applications, individual application info screen title. For example, if they click on "Browser" in "Manage applications", the title of the next screen will be this -->
    <string name="application_info_label">App info</string>
    <!-- 2692 Master clear progress screen text [CHAR LIMIT=75] -->
    <string name="master_clear_progress_text">Please wait…</string>
    <!-- 3022 Manage applications, version string displayed in app snippet -->
    <string name="version_text">version %1$s</string>
    <!-- 5947 [CHAR LIMIT=35] Feedback on the device -->
    <string name="device_feedback">Send feedback</string>

    <!-- 3200 On Text & language settings screen, setting option name. title of the setting to take the user to a screen to select the locale. -->
    <string name="phone_language">Language</string>


    <!-- 4314 ActionBar action to share the current selection [CHAR LIMIT=10] -->
    <string name="share">Share</string>
    <!-- 5422 Toast message when there is no network connection to start VPN. [CHAR LIMIT=100] -->
    <string name="vpn_no_network">There is no network connection. Please try again later.</string>
    <!-- 5597 Text used as a search hint into the search box -->
    <string name="search_menu">Search</string>


    <string name="bt_message_your_turn">Your move, put a dot…</string>
    <string name="bt_message_opponents_turn">Opponent\'s move, wait…</string>

    <!-- garbage is below-->


    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="next_turn_">Next turn</string>
    <string name="welcome">Welcome to the Skeleton, the game!  This is network-only, so you&amp;apos;ll need to log in to play!</string>
    <string name="sign_out">Sign Out</string>
    <string name="match_instructions">Type in a new word for the data in this game, then hit done.</string>
    <string name="quick_match">Quick match</string>
    <string name="continue_str">Continue</string>
    <string name="guesser_prompt">This has not been set.</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="leave">Leave</string>
    <string name="finish">Finish</string>
    <string name="welcome_to_our_skeleton_app_">Welcome to our skeleton app!</string>
    <string name="check_games">Check games</string>
    <string name="start_match">Start Match</string>
    <string name="turn_counter">Turn counter</string>
    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>

    <string name="status_multiplayer_error_not_trusted_tester">Anyone you invite must be a trusted tester</string>
    <string name="match_error_already_rematched">This rematch has already been started!</string>
    <string name="client_reconnect_required">Games client reconnect required</string>
    <string name="network_error_operation_failed">Network error: Operation failed</string>
    <string name="internal_error">Internal error</string>
    <string name="unexpected_status">Unexpected status</string>
    <string name="match_error_inactive_match">This match is inactive.</string>
    <string name='match_error_locally_modified'>This match has locally-modified data.  This operation cannot be performed until the match is sent to the server.</string>

    <string name="nsd_error" translatable="false">DNS-Based Service Discovery is only available since Android 4.1.</string>
    <string name="bluetooth_error" translatable="false">Bluetooth is not supported by your device.</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed">License check failed.</string>
    <string name="unknown_error">Unknown error.</string>

    <string name="signing_out">Signing out</string>
    <string name="game_blurb">A sample game that tests your ability to click a button. Can you click faster than your friends? Only one way to find out! To play this game with friends, you must sign in with Google.</string>
    <string name="single_player">Single Player</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Quick game</string>
    <string name="invite_players">Invite players</string>
    <string name="show_invitations">Show invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="dismiss">Dismiss</string>
    <string name="your_score">Your score:</string>
    <string name="error">Error</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>

</resources>